Implementing get Trainer Profile data in backend